# GridRunner

./: .gemini.md  .gitignore  ARCHITECTURE.md  DEVELOPMENT_LOG.md  README.md  TER_AGENT_PROTOCOL.md  build_log.txt  demo_ter_rpc.py  index.html  package-lock.json  package.json  plan.md  plan_connection_monitor.md  process.md  vite.config.ts
.github/workflows/: release.yml
.ter/: skills.json
gr_agent/: go.mod  main.go
plugins/chart-test/: manifest.yaml
plugins/dummy/: manifest.yaml
src/: App.vue  TerminalManager.ts  WebviewManager.ts  WidgetRegistry.ts  constants.ts  main.ts  rpcBus.ts  store.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archiver.rs  crypto.rs  db.rs  lib.rs  lib_test.rs  main.rs  test.rs
src/components/: AutoPilotDashboard.vue  CyberCursor.vue  CyberGate.vue  CyberHUD.vue  CyberImageViewer.vue  CyberNexus.vue  CyberPdfViewer.vue  CyberWebview.vue  LayoutNodeRenderer.vue  MatrixAllocator.vue  MatrixScreen.vue  NetworkMatrix.vue  QuantumInspector.vue  RunningProcesses.vue  SettingsPanel.vue  SftpExplorer.vue  SidebarPanel.vue  TerEditor.vue  TerminalTabs.vue  TerminalView.vue  TileContainer.vue  VaultView.vue
src/composables/: useBookmarks.ts  useContextMenu.ts  useCyber.ts  useExplorer.ts  useExplorerContextMenu.ts  useMorse.ts  usePtyListener.ts  useStats.ts  useTabs.ts  useUIPreferences.ts  useWebviews.ts
